Removed sonar issues and added unit tests